hotfix: 피드 전체 기능 픽스 피드 전체 기능이 정상적으로 작동하도록 수정합니다.