@@ -20,7 +20,9 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
@@ -41,6 +43,10 @@ public class MediaServiceImpl implements MediaService {
     @Override
     @Transactional
     public void uploads(List<MultipartFile> multipartFiles, Long feedId) {
+        if (multipartFiles == null) {
+            return;
+        }
+
         List<MediaCategory> categories = checkFileType(multipartFiles);
         List<Media> medias = new ArrayList<>();
         Feed feed = feedProvider.getById(feedId);
@@ -52,7 +58,7 @@ public class MediaServiceImpl implements MediaService {
             String extension = "." + StringUtils.getFilenameExtension(multipartFile.getOriginalFilename());
             MediaCategory category = categories.get(i);
             try {
-                String filepath = category + filename;
+                String filepath = category + "/" + filename;
                 s3Service.upload(multipartFile, filepath);
             } catch (MediaTaskException ignored) {
 
@@ -143,6 +149,10 @@ public class MediaServiceImpl implements MediaService {
     @Override
     @Transactional
     public void deleteExistFile(Media media) {
+        if (media == null) {
+            return;
+        }
+
         String filepath = checkFileType(media.getExtension()) + media.getFilename() + media.getExtension();
 
         try {
@@ -152,20 +162,24 @@ public class MediaServiceImpl implements MediaService {
         }
     }
 
+    @Override
+    @Transactional
+    public void deleteExistFiles(List<Media> medias) {
+        if (medias == null) {
+            return;
+        }
+
+        medias.forEach(this::deleteExistFile);
+    }
 
     @Override
-    @Transactional(readOnly = true)
-    public void delete(Long feedId) {
-        List<Media> medias = mediaRepository.findAllByFeedId(feedId);
-
-        medias.forEach(media -> {
-            String filepath = checkFileType(media.getExtension()) + media.getFilename() + media.getExtension();
-
-            try {
-                s3Service.delete(filepath);
-            } catch (MediaTaskException ignored) {
-
-            }
+    @Transactional
+    public void deleteAll(List<Media> media) {
+        media.forEach(m -> {
+            m.setMember(null);
+            m.setFeed(null);
+            m.setJobPost(null);
+            mediaRepository.delete(m);
         });
     }
 
@@ -188,16 +202,30 @@ public class MediaServiceImpl implements MediaService {
     @Override
     public String getUrl(Media media) {
         String filepath = checkFileType(media.getExtension()) + "/" + media.getFilename();
-
-        System.out.println("URLURLURL : " + filepath);
-
+        System.out.println(filepath);
         try {
-            return s3Service.generatePreSignedUrl(filepath);
+            String url = s3Service.generatePreSignedUrl(filepath);
+            System.out.println(url);
+            return url;
         } catch (MediaTaskException ignored) {
 
         }
 
         return null;
+    }
+
+    @Override
+    public List<String> getUrls(List<Media> media) {
+        return media.stream().map(this::getUrl).toList();
+    }
+
+    @Override
+    public List<Media> getMedias(List<String> preSignedUrls) {
+        if (preSignedUrls == null) {
+            return null;
+        }
+
+        return preSignedUrls.stream().map(this::getMedia).toList();
     }
 
     @Override
@@ -246,9 +274,17 @@ public class MediaServiceImpl implements MediaService {
     }
 
     private String extractFilename(String preSignedUrl) {
-        String uriPath = URI.create(preSignedUrl).getPath();
+        try {
+            URL uriPath = new URL(preSignedUrl);
 
-        return uriPath.substring(uriPath.lastIndexOf("/") + 1);
+            return uriPath.getPath();
+        } catch (MalformedURLException e) {
+            return null;
+        }
+    }
+
+    private List<String> extractFilenames(List<String> preSignedUrls) {
+        return preSignedUrls.stream().map(this::extractFilename).toList();
     }
 
     private String extractFilepath(String preSignedUrl) {
